crates/data-dict/tests/snapshots/validate_spec__constraints_table_bareword_rejected.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    columns:
      - name: a
        type: string
        examples: [x]
    constraints:
      - required
────────────────────────────────────────
error[Q-1-11]: A value must have the type its schema requires.
  --> dict.yaml:10:9
   |
LL |       - required
   |         ^^^^^^^^ Expected object, got string
   |
   = help: Use YAML mapping syntax with key-value pairs?
